SG-1191 - fix broken accordion details, section spacing, tabbed nav, and status messages

--- a/web/themes/custom/sfgovpl/src/sass/_mixins.scss
+++ b/web/themes/custom/sfgovpl/src/sass/_mixins.scss
@@ -163,7 +163,8 @@
   padding: 13px 20px 11px;
   text-align: center;
   text-decoration: none;
-
+  display: inline-block;
+  line-height: 1;
   &:hover {
     background: $c-dark-blue;
   }
