--- a/web/themes/custom/sfgovpl/src/sass/components/_tabbed-navigation.scss
+++ b/web/themes/custom/sfgovpl/src/sass/components/_tabbed-navigation.scss
@@ -1,4 +1,5 @@
 .sfgov-tabbed-navigation {
+  @include contain-1090;
   ul {
     border-bottom: 1px solid $c-blue-3;
     margin: 10px 0 0 0;
